syntax = "proto3";

option csharp_namespace = "CloudDrop";

package contents;

import "google/protobuf/wrappers.proto";

service ContentsService {
    rpc GetContentsFromStorage (GetContentsFromStorageRequest) returns (ContentsResponse);
    rpc GetChildrenContents (GetChildrenContentsRequest) returns (ContentsResponse);
    rpc NewFolder (NewFolderMessage) returns (ContentMessage);
    rpc RemoveContent (RemoveContentId) returns (ContentRemoveResult);
    
    rpc GetSpecialContentId (GetSpecialContentIdRequest) returns (GetSpecialContentIdResponse);
    rpc GetDeletedContents (EmptyGetContentsMessage) returns (DeletedContentsMessage);
}

message GetContentsFromStorageRequest {
    int32 storage_id = 1;
}

message GetChildrenContentsRequest {
    int32 content_id = 2;
}

message ContentsResponse {
    repeated ContentMessage children = 1;
}

message ContentMessage {
    int32 id = 1;
    ContentTypeEnum content_type = 2;
    google.protobuf.StringValue path = 3;
    string name = 4;
    google.protobuf.Int64Value size = 5;
    
    StorageMessage storage = 6;
    ContentMessage parent = 7;
    repeated ContentMessage children = 8;
}

enum ContentTypeEnum {
    CONTENT_TYPE_ENUM_FILE = 0;
    CONTENT_TYPE_ENUM_FOLDER = 1;
}

message StorageMessage {
    int32 id = 1;
    int64 storage_used = 2;
    google.protobuf.Int64Value storage_quote = 3;
}


message RemoveContentId {
    int32 content_id = 1;
}

message ContentRemoveResult {
    string message = 1;
}

message NewFolderMessage {
    string name = 1;
    google.protobuf.Int32Value storage_id = 2;
    google.protobuf.Int32Value parent_id = 3;
}

message GetSpecialContentIdRequest {
    GetSpecialContentIdEnum special_content_enum = 1;
}

message GetSpecialContentIdResponse {
    int32 content_id = 1;
}

enum GetSpecialContentIdEnum {
    GET_SPECIAL_CONTENT_ID_ENUM_HOME = 0;
    GET_SPECIAL_CONTENT_ID_ENUM_TRASHCAN = 1;
}

message EmptyGetContentsMessage {}

message DeletedContentsMessage {
    repeated ContentMessage content_messages = 1;
}